--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <button class="button" id="new-quote">New quote</button>
         </div>
       </div>
-      <div class="footer">by <a href="https://codepen.io/hezag/">hezag</a></div>
+      <div class="footer">by <a href="https://www.linkedin.com/in/shreyash-gaikwad-b30ab519b/">Shreyash</a></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
